less/stb-typeahead.less
.tt-dropdown-menu,
.gist {
  text-align: left;
}

.table-of-contents li {
  display: inline-block;
  *display: inline;
  zoom: 1;

  a {
    font-size: 16px;
    color: #999;
  }
}

.typeahead,
.tt-query,
.tt-hint {
  width: 396px;
  padding: 8px 12px;
  font-size: 16px;
  line-height: 30px;
  border: 2px solid @stb-gray-third;
  outline: none;
}

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
  color: @stb-gray-fourth !important;
}

.tt-input {
  background: transparent !important;
}

.tt-mobile .typeahead {
  width: 100%;
}

.typeahead:focus {
  border: 2px solid @stb-secondary-sky;
}


.tt-dropdown-menu {
  width: 60%;
  background-color: @stb-primary-white;
  border: 1px solid @stb-gray-third;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
  -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
  box-shadow: 0 5px 10px rgba(0,0,0,.2);
  padding: 10px 0px;
}

.tt-mobile .tt-dropdown-menu {
  width: 100%;
}

.tt-suggestion {
  line-height: 24px;
  color: #000;
  padding: 5px 15px;

  p {
    font-size: 16px;
    white-space: none;
    color: @stb-secondary-charcoal;

  }

  &.tt-cursor {
    background-color: @stb-gray-first;
    text-decoration: underline;
  }
}

.search,.searchcontainer{

  .tt-dropdown-menu > .tt-dataset-direkte:not(:empty)::before {
    content: "Gå direkte til";
    text-align: center;
    width: 100%;
    display: inline-block;
    padding-top: 10px;
    //border-top: 1px solid @stb-gray-third;
    font-family: "open sans bold";
  }

  h3.headline-search{
    text-align: center;
    margin: 10px 0px 5px 0px;
    //background-color: @stb-gray-first;
    //border-bottom: 1px solid @stb-gray-third;
    // border-top: 1px solid @stb-gray-third;
    padding: 0 !important;
    //color: @stb-gray-fifth;
    font-size: 14px;
    font-family: "open sans bold"
  }

  .headline-search span {
    margin: 0;
    padding: 0;
    text-align: left;
  }
}

#searchHit {
  width: 100px;
}

.tt-mobile .twitter-typeahead {
  width: inherit;
}

